# json-yaml-difference-generator

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml  test-coverage.yml
gendiff/: __init__.py  gendiff.py  utils.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/lib/: gendiff.py
gendiff/modules/: gendiff.py
gendiff/scripts/: entry_point.py  gendiff.py
gendiff/utils/: file_utils.py  format_utils.py
gendiff/utils/from_format/: utils.py
scripts/: gendiff.py
tests/: test_formats.py  test_gendiff.py  test_gendiff_jsons.py  test_gendiff_plain.py  test_gendiff_yaml.py  test_json.py  test_plain.py  test_stylish.py
tests/fixtures/json/: expected_diff
