[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "difference-calculator for your files."
authors = ["nickolay_kuzmin <nickolay.kuzmin2001@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"},]

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "^6.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.entry_point:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
